--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.vectomatic</groupId>
+	<parent>
+		<groupId>org.vectomatic</groupId>
+		<artifactId>vectomatic-gwt-parent</artifactId>
+		<version>0.1</version>
+	</parent>
 	<artifactId>svgreal</artifactId>
 	<version>0.2.2-SNAPSHOT</version>
 	<name>svgreal</name>
 	<packaging>war</packaging>
-	<description>An SVG view and editor based on lib-gwt-svg and GXT</description>
+	<description>An SVG view and editor based on lib-gwt-svg and Ext-GWT</description>
 	<url>http://www.vectomatic.org/mvn-sites/svgreal</url>
 	<licenses>
 		<license>
@@ -18,19 +22,6 @@
 		<connection>scm:svn:http://svgreal.googlecode.com/svn/svgreal/trunk</connection>
 		<developerConnection>scm:svn:file:///home/laaglu/svn/svgrealpub/svgreal/trunk</developerConnection>
 	</scm>
-	<developers>
-		<developer>
-			<id>laaglu</id>
-			<name>Lukas Laag</name>
-			<email>laaglu@gmail.com</email>
-			<url>http://www.vectomatic.org</url>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>1</timezone>
-		</developer>
-	</developers>
 	<dependencies>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
@@ -48,61 +39,31 @@
 			<version>0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-user</artifactId>
-			<version>2.4.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-dev</artifactId>
-			<version>2.4.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<classifier>sources</classifier>
-			<version>1.0.0.GA</version>
-		</dependency>
-		<dependency>
 			<groupId>com.extjs</groupId>
 			<artifactId>gxt</artifactId>
-			<version>2.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
 	    <dependency>
 	        <groupId>org.seleniumhq.selenium</groupId>
 	        <artifactId>selenium-java</artifactId>
-	        <version>2.5.0</version>
 			<scope>test</scope>
 	    </dependency>  
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
 		</dependency>
 		<dependency>
 			<groupId>httpunit</groupId>
 			<artifactId>httpunit</artifactId>
-			<version>1.7</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<properties>
 		<gwt.module>org.vectomatic.svg.edit.svgreal</gwt.module>
- 		<gwt.style>OBF</gwt.style>
- 		<gwt.logLevel>WARN</gwt.logLevel>
 	</properties>
 	
 	<build>
@@ -124,110 +85,18 @@
 			</resource>
 		</resources>
         <plugins>
-			<!-- Build using java 1.6. GWT requires at least Java 1.5 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+			<!-- Produce a skinny war as only the GWT-generated files are of interest
+			but keep the server-side requirements of the project in the jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
         		<version>2.2</version>
         		<configuration>
-					<!-- Produce a skinny war as only the GWT-generated files are of interest -->
 					<packagingExcludes>%regex[WEB-INF/lib/(?!log4j).*.jar],%regex[WEB-INF/classes/(?!org/vectomatic/svg/edit/server/FetchServlet\.class|log4j\.properties).*]</packagingExcludes>
-				</configuration>
-			</plugin>
-			<!--  configure the GWT-Maven plugin -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>gwt-maven-plugin</artifactId>
-			  <!-- Use patch version of GWT maven plugin to address
-			   http://jira.codehaus.org/browse/MGWT-216 and http://jira.codehaus.org/browse/MGWT-285 -->
-				<version>2.4.0-1-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<id>gwt compilation</id>
-						<configuration>
-							<modules>
-								<module>${gwt.module}</module>
-							</modules>
-							<style>${gwt.style}</style>
-							<logLevel>${gwt.logLevel}</logLevel>
-							<extraJvmArgs>-Xmx512m</extraJvmArgs>
-							<gen>${project.build.directory}/gen</gen>
-							<extra>${project.build.directory}/aux</extra>
-						</configuration>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>svgreal</id>
-						<configuration>
-							<includes>**/*GwtTestSuite.java</includes>
-							<mode>selenium</mode>
-							<testTimeOut>240</testTimeOut>
-      						<selenium>localhost:4444/*firefox"</selenium>
-      					</configuration>
-						<goals>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.4.3</version>
-				<configuration>
-					<excludes>
-						<exclude>**/*GwtTest.java</exclude>
-						<exclude>**/*GwtTestSuite.java</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<!-- Lock down to 2.0.1 + no license report because of
-				http://jira.codehaus.org/browse/MPIR-150 -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.0.1</version>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<report>index</report>
-							<report>dependencies</report>
-							<report>project-team</report>
-							<report>summary</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.6.1</version>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
 	<distributionManagement>
 		<downloadUrl>http://www.vectomatic.org/apps/svgreal</downloadUrl>
 	</distributionManagement>
@@ -253,29 +122,6 @@
     			<gwt.style>DETAILED</gwt.style>
     			<gwt.logLevel>INFO</gwt.logLevel>
     		</properties>
-		</profile>
-		
-		<!-- ==========================================
-		 Profiles to deploy to your own environment. Define
-		 the associated properties in your settings.xml to
-		 describe the server you want to deploy to.
-		 ==============================================-->
-		<profile>
-			<id>deployment-local</id>
-			<distributionManagement>
-				<repository>
-					<id>${vectomatic.release.id}</id>
-					<url>${vectomatic.release.url}</url>
-				</repository>
-				<snapshotRepository>
-					<id>${vectomatic.snapshots.id}</id>
-					<url>${vectomatic.snapshots.url}</url>
-				</snapshotRepository>
-				<site>
-					<id>${vectomatic.site.id}</id>
-					<url>${vectomatic.site.url}</url>
-				</site>
-			</distributionManagement>
 		</profile>
 	</profiles>
 </project>
