First jab at support for <use> elements

--- a/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants.properties
+++ b/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants.properties
@@ -34,6 +34,8 @@ lineY2=second point y coordinate
 polygonVertices=vertices
 pathD=path definition
 imageHref=reference to bitmap image
+useX=object x coordinate
+useY=object y coordinate
 
 ####################################
 # Global  category property names
