Removed method SVGModel.getDocumentRoot() (replaced by equivalent SVGModel.getSvgElement()) Use of HashMap in EditManipulatorBase and cleanup of manipulator code New mode for <use> elements New geometry manipulator for <use> elements sample.svg updated to contain <use> instances

--- a/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants.properties
+++ b/src/main/resources/org/vectomatic/svg/edit/client/model/ModelConstants.properties
@@ -36,6 +36,8 @@ pathD=path definition
 imageHref=reference to bitmap image
 useX=object x coordinate
 useY=object y coordinate
+useWidth=object width
+useHeight=object height
 
 ####################################
 # Global  category property names
