--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,12 @@
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-svg</artifactId>
-			<version>0.5.6-SNAPSHOT</version>
+			<version>0.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-file</artifactId>
-			<version>0.3.1-SNAPSHOT</version>
+			<version>0.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google</groupId>
