Migration to org.httpunit-1.7.2 to fix broken JUnit test

--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,9 @@
 			<artifactId>log4j</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>httpunit</groupId>
+			<groupId>org.httpunit</groupId>
 			<artifactId>httpunit</artifactId>
+            <version>1.7.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
