--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.vectomatic</groupId>
 		<artifactId>vectomatic-gwt-parent</artifactId>
-		<version>0.3</version>
+		<version>0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>svgreal</artifactId>
 	<version>0.2.6-SNAPSHOT</version>
@@ -26,17 +26,17 @@
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-svg</artifactId>
-			<version>0.5.8</version>
+			<version>0.5.9-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-file</artifactId>
-			<version>0.3.4</version>
+			<version>0.3.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google</groupId>
 			<artifactId>gwt-incubator-slider</artifactId>
-			<version>0.1.2</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.extjs</groupId>
@@ -91,7 +91,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-        		<version>2.2</version>
+        		<version>2.4</version>
         		<configuration>
 					<packagingExcludes>%regex[WEB-INF/lib/(?!log4j).*.jar],%regex[WEB-INF/classes/(?!org/vectomatic/svg/edit/server/FetchServlet\.class|log4j\.properties).*]</packagingExcludes>
 				</configuration>
@@ -101,7 +101,7 @@
                 <artifactId>gwt-maven-plugin</artifactId>
               <!-- Use patch version of GWT maven plugin to address
                http://jira.codehaus.org/browse/MGWT-216 and http://jira.codehaus.org/browse/MGWT-285 -->
-                <version>2.5.1</version>
+                <version>2.6.0</version>
                 <executions>
                     <execution>
                         <id>gwt compilation</id>
