--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.4</version>
 	</parent>
 	<artifactId>svgreal</artifactId>
-	<version>0.2.6</version>
+	<version>0.2.7-SNAPSHOT</version>
 	<name>svgreal</name>
 	<packaging>war</packaging>
 	<description>An SVG view and editor based on lib-gwt-svg and Ext-GWT</description>
