--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.5</version>
 	</parent>
 	<artifactId>svgreal</artifactId>
-	<version>0.2.7-SNAPSHOT</version>
+	<version>0.2.7</version>
 	<name>svgreal</name>
 	<packaging>war</packaging>
 	<description>An SVG view and editor based on lib-gwt-svg and Ext-GWT</description>
@@ -21,7 +21,8 @@
 		<url>scm:git:git@github.com:laaglu/svgreal.git</url>
 		<connection>scm:git:git@github.com:laaglu/svgreal.git</connection>
 		<developerConnection>scm:git:git@github.com:laaglu/svgreal.git</developerConnection>
-	</scm>
+	  <tag>0.2.7</tag>
+  </scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
