--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-svg</artifactId>
-			<version>0.5.11-SNAPSHOT</version>
+			<version>0.5.11</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
