--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.vectomatic</groupId>
 		<artifactId>vectomatic-gwt-parent</artifactId>
-		<version>0.5</version>
+		<version>0.6</version>
 	</parent>
 	<artifactId>svgreal</artifactId>
 	<version>0.2.9-SNAPSHOT</version>
@@ -27,17 +27,17 @@
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-svg</artifactId>
-			<version>0.5.11</version>
+			<version>0.5.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-file</artifactId>
-			<version>0.3.6</version>
+			<version>0.3.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google</groupId>
 			<artifactId>gwt-incubator-slider</artifactId>
-			<version>0.1.4</version>
+			<version>>0.1.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.extjs</groupId>
