--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>com.google</groupId>
 			<artifactId>gwt-incubator-slider</artifactId>
-			<version>>0.1.5</version>
+			<version>0.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.extjs</groupId>
