--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.vectomatic</groupId>
 		<artifactId>vectomatic-gwt-parent</artifactId>
-		<version>0.6</version>
+		<version>0.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>svgreal</artifactId>
 	<version>0.2.10-SNAPSHOT</version>
@@ -27,17 +27,17 @@
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-svg</artifactId>
-			<version>0.5.12</version>
+			<version>0.5.13-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vectomatic</groupId>
 			<artifactId>lib-gwt-file</artifactId>
-			<version>0.3.7</version>
+			<version>0.3.8-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google</groupId>
 			<artifactId>gwt-incubator-slider</artifactId>
-			<version>0.1.5</version>
+			<version>0.1.6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.extjs</groupId>
@@ -102,7 +102,7 @@
 				<artifactId>gwt-maven-plugin</artifactId>
 			  <!-- Use patch version of GWT maven plugin to address
 			   http://jira.codehaus.org/browse/MGWT-216 and http://jira.codehaus.org/browse/MGWT-285 -->
-				<version>2.8.0</version>
+				<version>2.8.1</version>
 				<executions>
 					<execution>
 						<id>gwt compilation</id>
